fix(core): add spacing to buttons with icons in navs

--- a/core/src/components/cat-button/cat-button.scss
+++ b/core/src/components/cat-button/cat-button.scss
@@ -180,14 +180,7 @@ $button-sizes: (
     min-width: map.get($button-sizes, $size);
     padding: $-padding-v $-padding-h;
     @include cat-body($fontSize, null);
-
-    .cat-button-prefix {
-      margin-right: 0.25rem;
-    }
-
-    .cat-button-suffix {
-      margin-left: 0.25rem;
-    }
+    gap: 0.25rem;
 
     // normalize icon size for line height
     @if $fontSize == 'm' {
@@ -206,6 +199,7 @@ $button-sizes: (
     :host-context(nav) & {
       padding-left: $cat-nav-padding-horizontal;
       padding-right: $cat-nav-padding-horizontal;
+      gap: 0.5rem;
     }
   }
 
